--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
   app:
     build: .
     environment:
-      - SPRING_DATA_MONGODB_URI=mongodb://db:27017/zepartner
+      - SPRING_DATA_MONGODB_URI=mongodb://mongoDB:27017/partner
     ports:
       - "8080:8080"
     depends_on:
